# host-config

./: .ansible-lint  .editorconfig  .env.example  .gitattributes  .gitignore  .lychee.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_CONVENTIONS.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  justfile  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  design-discussion.md  gate-test.md  layer-task.md
.github/workflows/: ci.yml  docs-links.yml  e2e.yml
docs/: index.md
docs/adr/: 0001-python-3-12.md  0002-uv-package-manager.md  0003-fastapi-pydantic-jinja.md  0004-ruff-mypy-quality-gates.md  0005-pytest-hypothesis-testing.md  0006-ansible-iac-and-config.md  0007-just-task-runner.md  0008-github-markdown-svg-diagrams.md  0009-structlog-prometheus-observability.md  0010-github-actions-ci.md  0011-systems-overview.md  0012-deferred-signed-seed-delivery.md  0013-gpu-h200-infiniband-role.md  README.md  template.md
docs/architecture/: README.md  systems-overview.md
docs/artifacts/e2e-run-2026-05-26/: README.md  droplet-host-info.txt  pytest-coldstart-fresh-droplet.txt  pytest-output.txt  rendered-SN-CPU-001-meta-data  rendered-SN-CPU-001-network-config  rendered-SN-CPU-001-user-data  rendered-SN-GPU-001-network-config  rendered-SN-GPU-001-user-data
docs/artifacts/h200-infiniband-sample/: README.md  network-config  user-data
docs/diagrams/: README.md
docs/runbooks/: README.md  debug-cloud-init.md  deploy-do.md
fixtures/netbox/: __init__.py  errors.py  populate.py
fixtures/netbox/data/: b200-host.yaml  b300-host.yaml  cpu-host.yaml  h200-host.yaml
fixtures/vms/: __init__.py  launch.py  prepare_image.py
infra/ansible/: README.md  ansible.cfg  requirements.yml
infra/ansible/playbooks/: deploy-lab.yml  destroy.yml  netbox-dev.yml  provision.yml
infra/ansible/roles/netbox-dev/: README.md
infra/ansible/roles/nginx-cache/: README.md
scripts/: validate_h200_host.py
src/host_config/: __init__.py  errors.py  logging_config.py
src/host_config/models/: __init__.py  errors.py  intent.py  interface.py  types.py  validators.py  vlan.py
src/host_config/netbox/: __init__.py  errors.py  loader.py  schema.py
src/host_config/observability/: metrics.py
src/host_config/render/: __init__.py  emitter.py  environment.py
src/host_config/service/: __init__.py  app.py  dependencies.py  middleware.py  routes.py
tests/: conftest.py
tests/component/: conftest.py
tests/component/netbox/: test_loader.py  test_schema.py
tests/component/nginx/: test_cache.py
tests/e2e/: __init__.py  conftest.py  test_b300_host_boot.py  test_cpu_host_boot.py  test_do_teardown.py  test_hybrid_render.py
tests/e2e/fixtures/: test_vm_key  test_vm_key.pub
tests/integration/: conftest.py  test_netbox_fixtures.py  test_renderer_e2e.py
tests/unit/: test_smoke.py
tests/unit/fixtures/: test_populate.py
tests/unit/models/: test_errors.py  test_intent.py  test_interface.py  test_types.py  test_vlan.py
tests/unit/netbox/: test_errors.py  test_loader.py  test_schema.py
tests/unit/render/: test_emitter.py  test_templates.py
tests/unit/scripts/: test_validate_h200.py
tests/unit/service/: test_app.py  test_observability.py
(+51 files in other folders)
